; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/accel/extr_mc3230.c_mc3230_set_opcon.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/accel/extr_mc3230.c_mc3230_set_opcon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc3230_data = type { %struct.i2c_client* }
%struct.i2c_client = type { i32 }

@MC3230_REG_MODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"failed to read mode reg: %d\0A\00", align 1
@MC3230_MODE_OPCON_MASK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"failed to write mode reg: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mc3230_data*, i32)* @mc3230_set_opcon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mc3230_set_opcon(%struct.mc3230_data* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mc3230_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.i2c_client*, align 8
  store %struct.mc3230_data* %0, %struct.mc3230_data** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.mc3230_data*, %struct.mc3230_data** %4, align 8
  %9 = getelementptr inbounds %struct.mc3230_data, %struct.mc3230_data* %8, i32 0, i32 0
  %10 = load %struct.i2c_client*, %struct.i2c_client** %9, align 8
  store %struct.i2c_client* %10, %struct.i2c_client** %7, align 8
  %11 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %12 = load i32, i32* @MC3230_REG_MODE, align 4
  %13 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %11, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %18 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %17, i32 0, i32 0
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @dev_err(i32* %18, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %3, align 4
  br label %43

22:                                               ; preds = %2
  %23 = load i32, i32* @MC3230_MODE_OPCON_MASK, align 4
  %24 = xor i32 %23, -1
  %25 = load i32, i32* %6, align 4
  %26 = and i32 %25, %24
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %6, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %6, align 4
  %30 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %31 = load i32, i32* @MC3230_REG_MODE, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %30, i32 %31, i32 %32)
  store i32 %33, i32* %6, align 4
  %34 = load i32, i32* %6, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %22
  %37 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %38 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %37, i32 0, i32 0
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @dev_err(i32* %38, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* %6, align 4
  store i32 %41, i32* %3, align 4
  br label %43

42:                                               ; preds = %22
  store i32 0, i32* %3, align 4
  br label %43

43:                                               ; preds = %42, %36, %16
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @i2c_smbus_read_byte_data(%struct.i2c_client*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1

declare dso_local i32 @i2c_smbus_write_byte_data(%struct.i2c_client*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
